<?xml version="1.0"?>
<package>
    <name>ros_vive_driver</name>
    <version>0.0.0</version>
    <description>The ros_vive_driver package</description>
    <maintainer email="info@ivex.ai">IVEX</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>ros_vive_driver_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>ros_vive_driver_msgs</run_depend>

    <run_depend>python-openvr</run_depend>
    <run_depend>python-yaml</run_depend>
    <run_depend>python-rospkg</run_depend>
    <run_depend>python-catkin-pkg</run_depend>
    <run_depend>python-numpy</run_depend>


</package>
